# prompt-engineer

./: .gitignore  CONTRIBUTING.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
_bmad-output/: project-context.md
_bmad-output/brainstorming/: brainstorming-session-2026-06-26.md
_bmad-output/implementation-artifacts/: 1-1-project-foundation-welcome-screen.md  1-2-local-llm-integration-async-model-download.md  1-3-fast-refine-engine.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-06-27.md  prd.md  product-brief-Prompt Engineer-2026-06-27.md  ux-design-color-themes.html  ux-design-directions.html  ux-design-specification.md
src/: App.test.tsx  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: refine.rs
src-tauri/src/llm/: local.rs  mod.rs  router.rs
src-tauri/src/pipeline/: mod.rs
src/components/: FastRefineView.test.tsx  FastRefineView.tsx
src/components/navigation/: ChipNavigationBar.test.tsx  ChipNavigationBar.tsx  DemoPromptBanner.test.tsx  DemoPromptBanner.tsx  HeroSection.test.tsx  HeroSection.tsx  (+2 more)
src/hooks/: useModelDownload.test.ts  useModelDownload.ts
src/lib/: tauri.test.ts  tauri.ts  types.ts
src/stores/: useAppStore.test.ts  useAppStore.ts  useModelStore.test.ts  useModelStore.ts  usePromptStore.test.ts  usePromptStore.ts  useSettingsStore.test.ts  useSettingsStore.ts  useSkillTreeStore.test.ts  useSkillTreeStore.ts
src/styles/: globals.css
(+2 files in other folders)
