[package]
name = "prompt-engineer"
version = "0.1.0"
description = "Prompt Engineer - Your AI prompt coach"
authors = ["Marvin"]
edition = "2021"

[lib]
name = "prompt_engineer_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
